fixed responsiveness on smaller screen

--- a/css/base.css
+++ b/css/base.css
@@ -11,4 +11,6 @@ body {
 .wrapper {
 	max-width: 100%;
 	margin: 0 auto;
+	min-width: 430px;
+
 }
