--- a/css/modules/content.css
+++ b/css/modules/content.css
@@ -3,7 +3,6 @@
 	padding: 1rem;
 	border-top: 1px solid var(--primary);
 	border-bottom: 1px solid var(--primary);
-
 }
 
 .content__heading {
@@ -34,10 +33,7 @@
 	padding: 10px;
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
-	width: 100%;
-	max-width: 350px;
-	position: relative;
-
+	max-width: 100%;
 
 }
 
